fixed up the facts files

--- a/petfax/templates/facts/index.html
+++ b/petfax/templates/facts/index.html
@@ -1,3 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
 
-<h1>UserFax</h1>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PetFax | Index</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+</head>
 
+<body>
+    <div class="container">
+        <h1>UserFax</h1>
+    </div>
+</body>
+
+</html>
